# dAIry

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/: bot.py
src/dairy_bot/: __init__.py  config.py
src/dairy_bot/handlers/: __init__.py  journal.py
src/dairy_bot/middlewares/: __init__.py  auth.py
src/dairy_bot/services/: ai_service.py  git_sync.py  language_store.py  scheduler.py  storage.py
src/dairy_bot/texts/: __init__.py  messages.py
