[project]
name = "dAIry"
version = "0.1.0"
description = "Single-user Telegram journal bot (text + voice) for Obsidian."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22.0",
    "aiofiles>=23.2.1",
    "apscheduler>=3.10.4",
    "gitpython>=3.1.43",
    "openai>=1.52.0",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.5.2",
    "tzdata>=2024.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dairy_bot"]
